Fix partners__list wrap

--- a/src/sass/base/_shame.sass
+++ b/src/sass/base/_shame.sass
@@ -343,3 +343,6 @@
 .card-up__right .card-modal__link
     margin-bottom: 0 !important
     margin-top: 0 !important
+
+.partners__list
+    flex-wrap: wrap
